libreoffice (1:7.4.2~rc1-3) UNRELEASED; urgency=medium

  * debian/rules: fix build-depends-on-obsolete-package
    (s/libfreetype6-dev/libfreetype-dev/,
     s/libfontconfig1-dev/libfontconfig-dev/) 

 -- Rene Engelhard <rene@debian.org>  Sun, 02 Oct 2022 14:05:44 +0200

libreoffice (1:7.4.2~rc1-2) experimental; urgency=medium

  * reupload with correct control... 

 -- Rene Engelhard <rene@debian.org>  Wed, 21 Sep 2022 18:08:40 +0200

libreoffice (1:7.4.2~rc1-1) experimental; urgency=medium

  * New upstream release candidate

 -- Rene Engelhard <rene@debian.org>  Wed, 21 Sep 2022 17:36:50 +0200

libreoffice (1:7.4.1-1) unstable; urgency=medium

  * LibreOffice 7.4.1 final release (identical to rc2)
    (closes: #1018173)

  * debian/source/lintian-overrides: update for latest copyright changes

 -- Rene Engelhard <rene@debian.org>  Sat, 17 Sep 2022 19:49:58 +0200

libreoffice (1:7.4.1~rc2-3) unstable; urgency=medium

  * upload to unstable

  * debian/rules:
    - don't depend on node-prismjs on bullseye-backport since there it
      depends on nodejs... 
    - also use node-prismjs/node-normalize.css for the build and add them
      to Build-Depends-Indep
  * debian/copyright, debian/libreoffice-common.links: mention prism.css
    explicitly and link to node-primsjs' prism-coy.css

 -- Rene Engelhard <rene@debian.org>  Sun, 11 Sep 2022 22:30:14 +0200

libreoffice (1:7.4.1~rc2-2) experimental; urgency=medium

  * upload with correct control.... 

 -- Rene Engelhard <rene@debian.org>  Sat, 10 Sep 2022 13:28:55 +0200

libreoffice (1:7.4.1~rc2-1) experimental; urgency=medium

  * New upstream release candidate

  * debian/patches/poppler-22.09.diff: fix build with poppler 22.09,
    from gerrit

  The "hrmpf. lintian" release.

  * debian/source/lintian-overrides, debian/*.lintian-overrides,
    debian/copryight:
    - really fix those lintian warnings supposed to be fixed in -3
  * debian/changelog:
    - fix debian-changelog-line-too-long in -3s changelog