@@ -5045,6 +5045,9 @@ Description: office productivity suite -- Qt 5 integration
  .
  This package contains the Qt 5 plugin for drawing LibreOffices widgets
  with Qt 5 and a Qt File Picker and print dialog.
+ .
+ You need to enable it manually by export SAL_USE_VCLPLUGIN=qt5 if you are
+ not using Plasma.
 
 Package: libreoffice-plasma
 Architecture: alpha amd64 arm64 armel armhf hppa i386 ia64 kfreebsd-amd64 kfreebsd-i386 m68k mips mipsel mips64 mips64el powerpc powerpcspe ppc64 ppc64el s390 s390x sparc sparc64
