@@ -3,6 +3,10 @@ libreoffice (1:7.4.2~rc1-3) UNRELEASED; urgency=medium
   * debian/rules: fix build-depends-on-obsolete-package
     (s/libfreetype6-dev/libfreetype-dev/,
      s/libfontconfig1-dev/libfontconfig-dev/) 
+  * debian/control.gtk4.in: remove "when running under GNOME"
+    from package description since GNOME implies gtk3
+  * debian/control.{gtk4,qt5,qt6}.in: mention the need to
+    manually export SAL_USE_VCLPLUGIN
 
  -- Rene Engelhard <rene@debian.org>  Sun, 02 Oct 2022 14:05:44 +0200
 
